common-applications/test-environment/mindspore-website-api/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    name: mindspore-website-api
  name: mindspore-website-api
