common-applications/test-environment/mindspore-website-api/server-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: server-service
  namespace: mindspore-website-api
spec:
  ports:
  - name: http-port
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: server
  type: ClusterIP
