common-applications/test-environment/mindspore-website-api/server-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: server-ingress
  namespace: mindspore-website-api
spec:
  rules:
  - host: mindspore-api.test.osinfra.cn
    http:
      paths:
      - backend:
          serviceName: server-service
          servicePort: 8080
        path: /
  tls:
  - hosts:
    - mindspore-api.test.osinfra.cn
    secretName: server-tls
